# worldcup26

./: .gitignore  LICENSE  README.md  espn.py  install.sh  palette.py  pyproject.toml  state.py  term.py  ui.py  uninstall.sh  views.py  wc.py
benchmarks/: bench.py
examples/: dashboard.py  logtail.py
puretui/: __init__.py  app.py  commands.py  interact.py  layout.py  region.py  styles.py  testing.py  theme.py
scripts/: vendor.sh
tests/: bench_render.py  fixtures_views.py  test_app.py  test_canvas.py  test_color.py  test_commands.py  test_examples.py  test_fuzz_input.py  test_interact.py  test_layout.py  test_properties.py  test_public_api.py  test_region.py  test_styles.py  test_testing.py  test_text.py  test_theme.py  test_views_golden.py  test_wc_keys.py  test_widgets.py
tests/goldens/: bench_baseline.json  bracket_120x40.txt  bracket_80x24.txt  bracket_empty_120x40.txt  bracket_empty_80x24.txt  bracket_loading_120x40.txt  bracket_scrolled_120x40.txt  bracket_scrolled_80x24.txt  detail_empty_lineups_120x40.txt  detail_empty_stats_120x40.txt  detail_empty_timeline_120x40.txt  detail_lineups_120x40.txt  detail_lineups_80x24.txt  detail_lineups_fallback_120x40.txt  detail_lineups_fallback_80x24.txt  detail_loading_unknown_120x40.txt  detail_odds_120x40.txt  detail_odds_80x24.txt  detail_odds_decimal_120x40.txt  detail_stats_120x40.txt  detail_stats_80x24.txt  detail_timeline_120x40.txt  detail_timeline_80x24.txt  (+32 more)
tui/: __init__.py  app.py  canvas.py  commands.py  interact.py  layout.py  region.py  styles.py  term.py  testing.py  theme.py  widgets.py
